--- a/index.html
+++ b/index.html
@@ -6,5 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>html-london-trip</title>
     </head>
-    <body></body>
+    <body>
+        <h1>Il mio viaggio a Londra</h1>
+
+        <section>
+            <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="london-1" />
+            <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="london-2" />
+            <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="london-3" />
+        </section>
+    </body>
 </html>
