--- a/index.html
+++ b/index.html
@@ -14,5 +14,44 @@
             <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="london-2" />
             <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="london-3" />
         </section>
+
+        <hr />
+
+        <section>
+            <h2>Le mie spese</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <td>Numero</td>
+                        <td>Descrizione</td>
+                        <td>Costo</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>Totale</td>
+                        <td></td>
+                        <td>360€</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+
+        <hr />
     </body>
 </html>
