--- a/index.html
+++ b/index.html
@@ -53,5 +53,17 @@
         </section>
 
         <hr />
+
+        <section>
+            <h2>Cose da fare</h2>
+            <ul>
+                <li>Visitare la Tower of London</li>
+                <li>Visitare Greenwich</li>
+                <li>Ascoltare un artista di strada a Covent Garden</li>
+                <li>Mangiare il tipico Fish and Chips inglese</li>
+            </ul>
+        </section>
+
+        <hr />
     </body>
 </html>
