--- a/index.html
+++ b/index.html
@@ -65,5 +65,56 @@
         </section>
 
         <hr />
+
+        <section>
+            <h2>Info utili:</h2>
+            <ol>
+                <li>
+                    Numeri utili di emergenza
+                    <ul>
+                        <li>
+                            <strong>999</strong>
+                            - Emergenza
+                        </li>
+                        <li>
+                            <strong>101</strong>
+                            - Numero polizia
+                        </li>
+                        <li>
+                            <strong>111</strong>
+                            - Numeo assistenza medica
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    Hotel
+                    <ul>
+                        <li>
+                            <strong>Nome hotel:</strong>
+                            Buckingham Palace
+                        </li>
+                        <li>
+                            <strong>Indirizzo Hotem:</strong>
+                            Westminster, London SW1A 1AA, Regno
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    Aereo
+                    <ul>
+                        <li>
+                            <strong>Volo di andata:</strong>
+                            Y1234X, ore 9:30 da Milano Malpensa
+                        </li>
+                        <li>
+                            <strong>Volo di ritorno:</strong>
+                            Y1234X, ore 18:30 da London Heathrow
+                        </li>
+                    </ul>
+                </li>
+            </ol>
+        </section>
+
+        <hr />
     </body>
 </html>
