fix(table): fix table head

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <table>
                 <thead>
                     <tr>
-                        <td>Numero</td>
-                        <td>Descrizione</td>
-                        <td>Costo</td>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
                     </tr>
                 </thead>
                 <tbody>
